--- a/index.html
+++ b/index.html
@@ -70,13 +70,6 @@
         </div>
       </div>
 
-      <div class="metric-card card-info">
-        <div class="card-info">
-          <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS<br>AGENDADAS</h3>
-          <p class="card-value" id="totalAgendadas">0</p>
-        </div>
-      </div>
-
       <div class="metric-card card-secondary">
         <div class="card-info">
           <h3 class="card-title">REGISTROS DE<br>PENDÊNCIAS<br>CANCELADAS/GERAL</h3>
@@ -229,7 +222,7 @@
       </button>
     </div>
 
-    <!-- ✅ GRÁFICO 1: Pendências Não Resolvidas por Distrito (MANTÉM O ORIGINAL) -->
+    <!-- GRÁFICO 1: Pendências Não Resolvidas por Distrito -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Pendências Não Resolvidas por Distrito</h3>
       <div class="chart-wrapper-distrito">
@@ -237,7 +230,7 @@
       </div>
     </div>
 
-    <!-- ✅ GRÁFICO 2: Pendências Resolvidas por Distrito (AGORA VERTICAL) -->
+    <!-- GRÁFICO 2: Pendências Resolvidas por Distrito (AGORA VERTICAL) -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Pendências Resolvidas por Distrito</h3>
       <div class="chart-wrapper-distrito">
@@ -245,7 +238,7 @@
       </div>
     </div>
 
-    <!-- ✅ GRÁFICO 3: Registros de Pendências por Status (AGORA VERTICAL) -->
+    <!-- GRÁFICO 3: Registros de Pendências por Status (AGORA VERTICAL) -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Registros de Pendências por Status</h3>
       <div class="chart-wrapper-distrito">
@@ -320,7 +313,7 @@
       </div>
     </div>
 
-    <!-- ✅ EVOLUÇÃO TEMPORAL -->
+    <!-- EVOLUÇÃO TEMPORAL -->
     <div class="chart-box chart-box-full">
       <h3 class="chart-title">Evolução Temporal de Pendências</h3>
       <div class="chart-wrapper-distrito">
@@ -396,3 +389,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
